# voro-mcp

./: .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  NOTICE.md  README.md  RELEASING.md  modal_app.py  pyproject.toml
resources/: noun-cases.md  orthography-and-standard.md  verb-conjugation.md  vro-translator-prompt.md
scripts/: deploy_modal.sh  fetch_data.sh  fetch_giella.sh  install_giella_artifacts.sh  remove_modal.sh  run_local_ubuntu.sh
src/vro_mcp/: __init__.py  check_setup.py  config.py  correction.py  db.py  estonian_leakage.py  giella.py  neurotolge.py  server.py  tokenization.py  tools.py
src/vro_mcp/rules/: estonian-leakage-rules.json
tests/: test_smoke.py  test_tokenization.py
